--- a/Optimizers /RMS Prop(Root Mean Squared Propogation)/Jupyter Notebook.ipynb
+++ b/Optimizers /RMS Prop(Root Mean Squared Propogation)/Jupyter Notebook.ipynb
@@ -417,12 +417,12 @@
     {
       "cell_type": "code",
       "source": [
-        "def rms_prop(columns , lr = 0.001 , beta = 0.9 , epochs = 100): \n",
+        "def rms_prop(columns , lr = 0.001 , beta = 0.9 , epochs = 100 , epsilon = 1e-7): \n",
         "    updated_gradient = np.empty(shape = (2,2))\n",
         "    gradient_rec = []\n",
         "    gradient_sum = np.zeros(shape = (len(columns) , 2))\n",
         "    for epochs in range(epochs):\n",
-        "        if k == 0 or k == 1:\n",
+        "        if epochs == 0 or epochs == 1:\n",
         "            gradient = gradient\n",
         "        else :\n",
         "            if np.all(np.array(gradient_rec[epochs-2]) > np.array(gradient_rec[epochs-1])):\n",
@@ -441,7 +441,7 @@
         "\n",
         "        gradient_sum += np.array(gradient)\n",
         "\n",
-        "        params = params - np.dot((lr/ gradient) , gradient_sum)\n",
+        "        params = params - np.dot((lr/ np.sqrt(gradient + epsilon)) , gradient_sum)\n",
         "\n",
         "    return params "
       ],
