--- a/Layer/Pooling/Jupyter Notebook.ipynb
+++ b/Layer/Pooling/Jupyter Notebook.ipynb
@@ -190,7 +190,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_img = cv2.imread(\"/content/cat.325.jpg\")"
+        "test_img = cv2.imread(\"/content/sample_image.jpg\")"
       ],
       "metadata": {
         "id": "9CwmhjitSPm0"
